Rounds added to prediction tables. Register changed top Activate

--- a/client/stylesheets/globals/layout.import.less
+++ b/client/stylesheets/globals/layout.import.less
@@ -98,6 +98,17 @@ body {
   background-repeat: no-repeat;
 }
 
+#side-menu li.text-activate a, 
+#side-menu li.text-activate.active a, 
+#side-menu li.text-activate:hover a, 
+.text-activate {
+  color: @color-red;
+}
+
+.text-admin {
+  color: @color-orange;
+}
+
 .fixed-navbar #header {
   width: 100%;
   position: fixed;
