--- a/client/templates/views/fixtures/results-table.html
+++ b/client/templates/views/fixtures/results-table.html
@@ -7,6 +7,7 @@
                     <th data-class="bf-table-vs" data-sort-ignore="true" class="bf-center"></th>
                     <th data-class="bf-table-away" data-sort-ignore="true" data-hide="phone, tablet" class="bf-center">Võõrsil</th>
                     <th data-class="bf-table-group" data-sort-ignore="true" data-hide="phone, tablet" class="bf-center">Grupp</th>
+                    <th data-class="bf-table-round" data-sort-ignore="true" data-hide="phone, tablet" class="bf-center">Grupp</th>
                     <th data-class="bf-table-user" class="bf-center">Kasutaja</th>
                     <th data-class="bf-table-score" class="bf-center">Tulemus</th>
                     <th data-class="bf-table-points" class="bf-center">Punktid</th>
@@ -24,6 +25,7 @@
                     </td>
                     <td class="bf-table-away">{{fixture.away_team.name}}</td>
                     <td class="bf-table-group">{{fixture.group}}</td>
+                    <td class="bf-table-round">{{fixture.round}}</td>
                     <td class="bf-table-user">{{user.team}}</td>
                     <td class="bf-table-score">{{fixture.result.homeGoals}} : {{fixture.result.awayGoals}}</td>
                     <td class="bf-table-points">{{fixture.userPoints}}</td>
