--- a/client/stylesheets/globals/betfield.import.less
+++ b/client/stylesheets/globals/betfield.import.less
@@ -64,7 +64,8 @@
     height: auto;
 }
 
-.bf-table-group {
+.bf-table-group,
+.bf-table-round {
     width: auto; 
     text-align:center;
     height: auto;
