Payments production support

--- a/client/stylesheets/globals/betfield.import.less
+++ b/client/stylesheets/globals/betfield.import.less
@@ -103,6 +103,15 @@
     display: inline-flex;
 }
 
+#checkout button {
+    margin-top: 60px;
+}
+
+.panel-body p {
+    font-size: 13px;
+    text-align: left;
+}
+
 /* 
 Max width before this PARTICULAR table gets nasty
 This query will take effect for any screen smaller than 760px
