Revert "Payments production support"
This reverts commit 8a7f104944c3e690e9127d129a6cec5c80fe084f.

--- a/client/templates/common/navigation.html
+++ b/client/templates/common/navigation.html
@@ -23,11 +23,12 @@
                             {{/if}}
                         </a>
                         <ul class="dropdown-menu animated flipInX m-t-xs">
-							{{#if isInRole 'regular-user'}}
-							<li><a href="{{pathFor route='payments'}}">Aktiveeri ennustus</a></li>
+							{{#unless isInRole 'regular-user'}}
+							<!--li><a href="{{pathFor route='payments'}}">Aktiveeri ennustus</a></li-->
+                            <li><a href="#">Aktiveeri ennustus</a></li>
                             {{else}}
                             <li><a href="{{pathFor route='root'}}">Pealeht</a></li>
-                            {{/if}}
+                            {{/unless}}
                             <li class="divider"></li>
                             <li><a href="{{pathFor route='logout'}}">Logi välja</a></li>
                         </ul>
@@ -42,7 +43,6 @@
                     </div>
                     <!--div id="sparkline1" class="small-chart m-t-sm"></div-->
                 </div>
-                
             </div>
             {{/if}}
             
