--- a/client/templates/views/payments/payments.html
+++ b/client/templates/views/payments/payments.html
@@ -40,7 +40,7 @@
                             </div>
 							{{else}}
 							<div>
-								<p>Oled juba aktiveeritud!</p>
+								<p class="payment-text">Oled juba aktiveeritud!</p>
 							</div>
 							{{/if}}
 							<div class="col-md-6 text-left">
