--- a/client/templates/views/rules/rules.html
+++ b/client/templates/views/rules/rules.html
@@ -16,7 +16,105 @@
                             </div>
                         </div>
                     </div>
-            
+                    
+                    <div class="col-md-4 text-left">
+                        <h4>Millest alustada?</h4>
+                        <br>
+                        <ul>
+                            <li>
+                                Esimese sammuna pead end süsteemi kasutajaks tegema, mis toimub automaatselt, kui logid sisse oma sotsiaalmeedia konto kaudu.
+                            </li>
+                            <li>
+                                Peale esimest sisselogimist registreeritakse sind mitteaktiivse kasutajana. See tähendab, et sul on ligipääs enamustele süsteemi osadele, kuid sinu ennustused auhinnamängus veel arvesse ei lähe.
+                            </li>
+                            <li>
+                                Et sinu ennustus arvesse läheks, tuleb sul oma kasutaja aktiveerida, kasutades vastavaid viiteid navigatsiooni ribalt. Kasutaja aktiveerimiseks tuleb tasuda osavõtutasu €20, mida saab teha jälgides juhiseid 'Aktiveeri ennustused' leheküljelt ning kasutades omale meelepärast maksevahendit. Toetatud on kõik suuremad krediitkaardid ning ka otsemaksed Paypali kontolt.
+                            </li>
+                            <li>
+                                Kui oled osavõtutasu ära maksnud, aktiveeritakse sinu kasutaja automaatselt ning osaled mängus. 
+                            </li>
+                        </ul>
+                        <br>
+                        <h4>Kes osaleda võivad?</h4>
+                        <br>
+                        <ul>
+                            <li>
+                                Osaleda võivad kõik spordisõbrad, kellel eksisteerib kehtiv sotsiaalmeedia (Facebook, Google või Twitter) konto.
+                            </li>
+                            <li>
+                                Ennustusmängu korraldajad kinnitavad, et ühegi kasutaja andmeid süsteemiväliselt ei levitada ega muul otstarbel ei kasutata.
+                            </li>
+                            <li>
+                                Iga kasutaja vastutab oma osaluse ja mängu pandava raha eest ise. Kui kardad, et osavõtumaksu tasumine tekitab sulle finantsilisi probleeme, siis ära mängi!
+                            </li>
+                        </ul>
+                    </div>
+                    
+                    <div class="col-md-4 text-left">
+                        <h4>Mille peale ennustatakse?</h4>
+                        <br>
+                        <ul>
+                            <li>
+                                Ennustatakse turniiri iga mängu normaalaja skoori.
+                            </li>
+                            <li>
+                                Mäng on jagatud seitsmeks (7) vooruks, vastavalt sellele kui palju mänge peab üks meeskond võitma, et tulla Euroopa meistriks. Need voorud koosnevad järgmistest osadest:
+                                <ul>
+                                    <li>I voor - iga meeskonna 1. alagrupimäng</li>
+                                    <li>II voor - iga meeskonna 2. alagrupimäng</li>
+                                    <li>III voor - iga meeskonna 3. alagrupimäng</li>
+                                    <li>IV voor - kaheksandikfinaalid</li>
+                                    <li>V voor - veerandfinaalid</li>
+                                    <li>VI voor - poolfinaalid</li>
+                                    <li>VII voor - finaal</li>
+                                </ul>
+                            </li>
+                            <li>
+                                Iga voor lukustub 1h enne selle vooru esimese mängu algust. See tähendab, et enne seda aega on võimalik vooru tulemusi muuta. Kui vooru lukustamise tähtaeg on kätte jõudnud, siis selle vooru tulemusi enam muuta pole võimalik ning kehtima jäävad need ennustused, mis on selleks ajaks kasutaja poolt sisestatud ja andmebaasi salvestatud.
+                            </li>
+                            <li>
+                                Alagrupivoorude tulemusi on võimalik ette täita ka enne eelmise vooru lukustamist. Finaalide ennustuste sisestamine muutub võimalikuks peale vastava kohtumise meeskondade selgumist.
+                            </li>
+                        </ul>
+                    </div>
+                    
+                    <div class="col-md-4 text-left">
+                        <h4>Kuidas võitjad selgitatakse?</h4>
+                        <br>
+                        <ul>
+                            <li>
+                                Iga ennustuse eest on võimalik punkte saada alloleva loogika järgi:
+                                <ul>
+                                    <li>Täpse normaalaja skoori õigesti ennustamine annab kokku 5 punkti</li>
+                                    <li>Õige normaalaja tulemuse (õige võitja või viik, kuid vale skoor) ennustamine annab 2 punkti. Sealjuures õige väravatevahe ennustamine (k.a. viik) annab lisaks juurde 1 punkti.</li>
+                                </ul>
+                            </li>
+                            <li>
+                                Kokku on seega võimalik teenida maksimaalselt 51 x 5 = 255 punkti.
+                            </li>
+                            <li>
+                                Mängu paremusjärjestuse moodustatakse mängijate kogusumma alusel (suurem summa tagab kõrgema koha).
+                            </li>
+                            <li>
+                                Kui juhtub, et mitmel kasutajal on sama punktide summa, siis otsustatakse järjestus allolevate reeglite järgi (ülevalt alla):
+                                <ul>
+                                    <li>Suurem arv õigeid täpse skoori ennustusi</li>
+                                    <li>Suurem arv õige väravatevahega ennustusi</li>
+                                    <li>Suurem arv kogupunkte alagrupivoorudest</li>
+                                    <li>Loos</li>
+                                </ul>
+                            </li>
+                            <li>
+                                Vastavalt üldisele paremusjärjestusele toimub ka auhinnafondi jagamine, mis moodustab 75% kogu kasutajate aktiveerimistasudest. Ülejäänud 25% läheb lehekülje toimimiseks vajalike kulutuste katmiseks.
+                            </li>
+                            <li>
+                                Täpne auhinnafondi jagunemine selgub turniiri esimese mängu päeval, kui on kasutajate umbkaudne arv ja suurusjärk selgunud.
+                            </li>
+                            <li>
+                                Lisaks lõplikule paremusjärjestusele on võimalik võita ka eriauhind järgnevate voorude võitude eest: I, II, III ning (IV - VII summa). Lahti selgitades tähendab see seda, et iga alagrupivooru ja lisaks ka kõikide finaalide parimad saavad enda sisseostu raha tagasi teenida. Kõik eriauhinnad tulevad samuti auhinnafondist ning nendele ei kehti piiranguid, st üks kasutaja võib hea õnne korral võita mitu eriauhinda ning lisaks ka üldise paremusjärjestuse preemiatest osa saada.  
+                            </li>
+                        </ul>
+                    </div>
                     
                 {{/panel}}
             </div>
