--- a/client/templates/views/rules/rules.html
+++ b/client/templates/views/rules/rules.html
@@ -22,7 +22,7 @@
                         <br>
                         <ul>
                             <li>
-                                Esimese sammuna pead end süsteemi kasutajaks tegema, mis toimub automaatselt, kui logid sisse oma sotsiaalmeedia konto kaudu.
+                                Esimese sammuna pead end süsteemi kasutajaks lisama, mis toimub automaatselt, kui logid sisse oma sotsiaalmeedia konto kaudu.
                             </li>
                             <li>
                                 Peale esimest sisselogimist registreeritakse sind mitteaktiivse kasutajana. See tähendab, et sul on ligipääs enamustele süsteemi osadele, kuid sinu ennustused auhinnamängus veel arvesse ei lähe.
@@ -39,7 +39,7 @@
                         <br>
                         <ul>
                             <li>
-                                Osaleda võivad kõik spordisõbrad, kellel eksisteerib kehtiv sotsiaalmeedia (Facebook, Google või Twitter) konto.
+                                Osaleda võib iga spordisõber, kellel eksisteerib kehtiv sotsiaalmeedia (Facebook, Google või Twitter) konto.
                             </li>
                             <li>
                                 Ennustusmängu korraldajad kinnitavad, et ühegi kasutaja andmeid süsteemiväliselt ei levitada ega muul otstarbel ei kasutata.
@@ -58,7 +58,7 @@
                                 Ennustatakse turniiri iga mängu normaalaja skoori.
                             </li>
                             <li>
-                                Mäng on jagatud seitsmeks (7) vooruks, vastavalt sellele kui palju mänge peab üks meeskond võitma, et tulla Euroopa meistriks. Need voorud koosnevad järgmistest osadest:
+                                Mäng on jagatud seitsmeks (7) vooruks, vastavalt sellele kui palju mänge peab üks meeskond mängima, et tulla Euroopa meistriks. Need voorud koosnevad järgmistest osadest:
                                 <ul>
                                     <li>I voor - iga meeskonna 1. alagrupimäng</li>
                                     <li>II voor - iga meeskonna 2. alagrupimäng</li>
@@ -70,7 +70,7 @@
                                 </ul>
                             </li>
                             <li>
-                                Iga voor lukustub 1h enne selle vooru esimese mängu algust. See tähendab, et enne seda aega on võimalik vooru tulemusi muuta. Kui vooru lukustamise tähtaeg on kätte jõudnud, siis selle vooru tulemusi enam muuta pole võimalik ning kehtima jäävad need ennustused, mis on selleks ajaks kasutaja poolt sisestatud ja andmebaasi salvestatud.
+                                Iga voor lukustub 1h enne vooru esimese mängu algust, mis tähendab, et enne seda aega on võimalik veel antud vooru tulemusi muuta. Kui vooru lukustamise tähtaeg on kätte jõudnud, siis selle vooru tulemusi enam muuta pole võimalik ning kehtima jäävad need ennustused, mis on selleks ajaks kasutaja poolt sisestatud ja andmebaasi salvestatud.
                             </li>
                             <li>
                                 Alagrupivoorude tulemusi on võimalik ette täita ka enne eelmise vooru lukustamist. Finaalide ennustuste sisestamine muutub võimalikuks peale vastava kohtumise meeskondade selgumist.
