--- a/client/templates/common/navigation.html
+++ b/client/templates/common/navigation.html
@@ -3,7 +3,7 @@
         <div id="navigation">
             {{#if currentUser}}
             <div class="profile-picture">
-                <a href="{{pathFor route='dashboard'}}">
+                <a href="{{pathFor route='root'}}">
                     <img src="{{currentUser.profile.picture}}" alt="{{currentUser.profile.name}}" class="img-circle m-b">
                 </a>
 
