--- a/client/templates/common/page-header.html
+++ b/client/templates/common/page-header.html
@@ -13,7 +13,7 @@
 
                 <div id="hbreadcrumb" class="pull-right {{#unless small}} m-t-lg {{/unless}}">
                     <ol class="hbreadcrumb breadcrumb">
-                        <li><a href="{{pathFor route='dashboard'}}">{{_ "dashboard"}}</a></li>
+                        <li><a href="{{pathFor route='root'}}">{{_ "dashboard"}}</a></li>
                         <!--li>
                             <span>{{category}}</span>
                         </li-->
