--- a/client/templates/layouts/not-found.html
+++ b/client/templates/layouts/not-found.html
@@ -3,12 +3,12 @@
         <div class="row wrapper bg-white">
             <div class="col-lg-12">
                 <div class="text-center m-lg p-lg">
-                    <h1>Route Not Found</h1>
+                    <h1>Lehekülge ei leitud</h1>
 
                     <p>
-                        You can go back to main page (Dashboard)
+                        Mine tagasi pealehele
                     </p>
-                    <a href="{{pathFor route='dashboard'}}" class="btn btn-sm btn-primary">Go to Dashboard</a>
+                    <a href="{{pathFor route='root'}}" class="btn btn-sm btn-primary">Pealehele</a>
                 </div>
             </div>
         </div>
