--- a/client/templates/views/commonviews/errorOne.html
+++ b/client/templates/views/commonviews/errorOne.html
@@ -1,7 +1,7 @@
 <template name="errorOne">
 
     <div class="back-link">
-        <a href="{{pathFor route='dashboard'}}" class="btn btn-primary">{{_ "error_back_home"}}</a>
+        <a href="{{pathFor route='root'}}" class="btn btn-primary">{{_ "error_back_home"}}</a>
     </div>
 
     <div class="error-container">
@@ -11,7 +11,7 @@
         <p>
             {{_ "error_pnf_info"}}
         </p>
-        <a href="{{pathFor route='dashboard'}}" class="btn btn-xs btn-success">{{_ "error_back_home_bot"}}</a>
+        <a href="{{pathFor route='root'}}" class="btn btn-xs btn-success">{{_ "error_back_home_bot"}}</a>
     </div>
 
 </template>
