--- a/client/templates/views/rules/rules.html
+++ b/client/templates/views/rules/rules.html
@@ -29,7 +29,7 @@
                                                 Esimese sammuna pead end süsteemi kasutajaks lisama, mis toimub automaatselt, kui logid sisse oma sotsiaalmeedia konto kaudu.
                                             </li>
                                             <li>
-                                                Peale esimest sisselogimist registreeritakse sind mitteaktiivse kasutajana. See tähendab, et sul on ligipääs enamustele süsteemi osadele, kuid sinu ennustused auhinnamängus veel arvesse ei lähe.
+                                                Peale esimest sisselogimist registreeritakse sind mitteaktiivse kasutajana. See tähendab, et sul on ligipääs enamustele süsteemi osadele, kuid sinu ennustused mängus veel arvesse ei lähe.
                                             </li>
                                             <li>
                                                 Et sinu ennustus arvesse läheks, tuleb sul oma kasutaja aktiveerida, kasutades vastavaid viiteid navigatsiooni ribalt. Kasutaja aktiveerimiseks tuleb tasuda osavõtutasu €20, mida saab teha jälgides juhiseid 'Aktiveeri ennustused' leheküljelt ning kasutades omale meelepärast maksevahendit. Toetatud on kõik suuremad krediitkaardid ning ka otsemaksed Paypali kontolt.
@@ -46,10 +46,13 @@
                                                 Osaleda võib iga spordisõber, kellel eksisteerib kehtiv sotsiaalmeedia (Facebook, Google või Twitter) konto.
                                             </li>
                                             <li>
+                                                Üks mängija võib omada mitut ennustust, st võid registreerida läbi kõigi enda nimel eksisteerivate kontode. Mida rohkem ennustusi sisestad, seda suuremad shansid on teoorias ka võita.  
+                                            </li>
+                                            <li>
                                                 Ennustusmängu korraldajad kinnitavad, et ühegi kasutaja andmeid süsteemiväliselt ei levitada ega muul otstarbel ei kasutata.
                                             </li>
                                             <li>
-                                                Iga kasutaja vastutab oma osaluse ja mängu pandava raha eest ise. Kui kardad, et osavõtumaksu tasumine tekitab sulle finantsilisi probleeme, siis ära mängi!
+                                                Iga kasutaja vastutab oma osaluse ja mängu pandava raha eest ise. Kui kardad, et osavõtumaksu tasumine tekitab sulle finantsilisi probleeme, siis parem ära mängi!
                                             </li>
                                         </ul>
                                     </div>
@@ -77,6 +80,9 @@
                                                 Iga voor lukustub 1h enne vooru esimese mängu algust, mis tähendab, et enne seda aega on võimalik veel antud vooru tulemusi muuta. Kui vooru lukustamise tähtaeg on kätte jõudnud, siis selle vooru tulemusi enam muuta pole võimalik ning kehtima jäävad need ennustused, mis on selleks ajaks kasutaja poolt sisestatud ja andmebaasi salvestatud.
                                             </li>
                                             <li>
+                                                Vooru arvesse minemiseks peab olema eelnevalt kantud ka kasutaja aktiveerimistasu. See tähendab, kui kasutaja pole aktiveeritud 1h enne 1. vooru algust, siis selle vooru tulemused arvesse ei lähe. Kui sama kasutaja aktiveerib oma kasutaja peale 1. vooru algust, aga ennem 2. vooru lukustumist, siis tema ennustused alates 2. voorust lähevad arvesse. Sama loogika kehtib ka hilisemate aktiveerimistega, mis tähendab, et mänguga võib liituda igal ajal.
+                                            </li>
+                                            <li>
                                                 Alagrupivoorude tulemusi on võimalik ette täita ka enne eelmise vooru lukustamist. Finaalide ennustuste sisestamine muutub võimalikuks peale vastava kohtumise meeskondade selgumist.
                                             </li>
                                             <li>
@@ -93,7 +99,7 @@
                                         <br>
                                         <ul>
                                             <li>
-                                                Iga ennustuse eest on võimalik punkte saada alloleva loogika järgi:
+                                                Iga ennustuse eest on võimalik punkte saada allolevate kriteeriumite järgi:
                                                 <ul>
                                                     <li>Täpse normaalaja skoori õigesti ennustamine annab kokku 5 punkti</li>
                                                     <li>Õige normaalaja tulemuse (õige võitja või viik, kuid vale skoor) ennustamine annab 2 punkti. Sealjuures õige väravatevahe ennustamine (k.a. viik) annab lisaks juurde 1 punkti.</li>
@@ -103,7 +109,7 @@
                                                 Kokku on seega võimalik teenida maksimaalselt 51 x 5 = 255 punkti.
                                             </li>
                                             <li>
-                                                Mängu paremusjärjestuse moodustatakse mängijate kogusumma alusel (suurem summa tagab kõrgema koha).
+                                                Mängu paremusjärjestus moodustatakse mängijate ennustuste pealt teenitud punktide kogusumma alusel (suurem summa tagab kõrgema koha).
                                             </li>
                                             <li>
                                                 Kui juhtub, et mitmel kasutajal on sama punktide summa, siis otsustatakse järjestus allolevate reeglite järgi (ülevalt alla):
@@ -115,13 +121,7 @@
                                                 </ul>
                                             </li>
                                             <li>
-                                                Vastavalt üldisele paremusjärjestusele toimub ka auhinnafondi jagamine, mis moodustab 75% kogu kasutajate aktiveerimistasudest. Ülejäänud 25% läheb lehekülje toimimiseks vajalike kulutuste katmiseks.
-                                            </li>
-                                            <li>
-                                                Täpne auhinnafondi jagunemine selgub turniiri esimese mängu päeval, kui on kasutajate umbkaudne arv ja suurusjärk selgunud.
-                                            </li>
-                                            <li>
-                                                Lisaks lõplikule paremusjärjestusele on võimalik võita ka eriauhind järgnevate voorude võitude eest: I, II, III ning (IV - VII summa). Lahti selgitades tähendab see seda, et iga alagrupivooru parim ja lisaks ka finaalvoorude parim saavad enda sisseostu raha tagasi teenida. Kõik eriauhinnad tulevad auhinnafondist ning nendele ei kehti piiranguid, st üks kasutaja võib hea õnne korral võita mitu eriauhinda ning lisaks ka üldise paremusjärjestuse preemiatest osa saada.  
+                                                Lisaks lõplikule paremusjärjestusele on võimalik saada ka "eripreemia" järgnevate voorude võitude eest: I, II, III ning (IV - VII summa). Lahti selgitades tähendab see seda, et selgitame eraldi välja iga alagrupivooru ning ka finaalmängude parima ennustaja.  
                                             </li>
                                         </ul>
                                     </div>
