--- a/client/templates/views/rules/rules.html
+++ b/client/templates/views/rules/rules.html
@@ -114,9 +114,9 @@
                                             <li>
                                                 Kui juhtub, et mitmel kasutajal on sama punktide summa, siis otsustatakse järjestus allolevate reeglite järgi (ülevalt alla):
                                                 <ul>
-                                                    <li>Suurem arv õigeid täpse skoori ennustusi</li>
-                                                    <li>Suurem arv õige väravatevahega ennustusi</li>
-                                                    <li>Suurem arv kogupunkte alagrupivoorudest</li>
+                                                    <li>Suurem arv õigeid täpse skoori ennustusi.</li>
+                                                    <li>Suurem arv õige väravatevahega ennustusi.</li>
+                                                    <li>Suurem arv kogupunkte alagrupivoorudest.</li>
                                                     <li>Loos</li>
                                                 </ul>
                                             </li>
