admin user status update

--- a/client/templates/views/predictions/predictions-table.html
+++ b/client/templates/views/predictions/predictions-table.html
@@ -21,7 +21,7 @@
                     <td></td>
                     <td></td>
                     <td align="middle">
-                        <button id="pred-submit" type="submit" class="btn btn-success bf-table-submit">Submit</button>
+                        <button id="pred-submit" type="submit" class="btn btn-success bf-table-submit">Salvesta</button>
                     </td>
                 </tr>
             </tfoot>
