--- a/client/templates/views/table/table.html
+++ b/client/templates/views/table/table.html
@@ -16,7 +16,11 @@
                             </div>
                         </div>
                     </div>
-            
+
+                    {{#if isInRole 'administrator'}}
+                        {{> Template.dynamic template="userTable" data=userData}}
+                    {{/if}}
+
                     {{> Template.dynamic template="userPointsTable" data=userPointsData}}
                     
                 {{/panel}}
